css/index.css
:root {
    --background-day: #ffffff;
    --text-color-day: #000000;
    --background-night: #000000;
    --text-color-night: #ffffff;
}


body {
    margin: 0;
    padding: 0;
    font-family: 'Arial', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    min-height: 100vh;
    height: 100%;
    background-color: var(--background-day);
    color: var(--text-color-day);
    letter-spacing: 0.03em;
    text-transform: uppercase;
    width: 100%;
    transition: background-color 0.3s ease;
}

body > img{
    pointer-events: none;
}

html{

    margin: 0;
    padding: 0;
    overflow-x:unset;
}

.bold-text {
    font-weight: bold;
}

button {
    padding: 0.6em 0.6em;
    font-size: 1em;
    cursor: pointer;
    border: none;
    border-radius: 5px;
    margin-left: 1em;
}

button:hover {
    background-color: #4f0341;
    color: white;
    border-radius: 1em;
}

button:active {
    background-color: #4CAF50;
    color: white;
}


.fade-in {
    animation: fadeIn 1s ease-out forwards;
}

.None{
    display: none;
}
.up, .center, .down {
    text-align: center;
    width: 100%;
}

.down{
    background-color: #eeeeee;
    padding-top: 1em;
    padding-bottom: 1em;
}

.down > p {
    font-size: 0.8em;
    color: black;
}

.down > i {
    font-size: 2em;
    cursor: pointer;
    color:#4f0341;
}

select.flag-select option {
    font-family: "Segoe UI Emoji", sans-serif;
}

.logo >img{
    background-color: whitesmoke;
    width: 100%;
    height: auto;
}

.logo{
    display: flex;
    align-items:center;
    justify-content: space-between;
}


@media screen and (max-width: 1100px) {

    html{
        overflow-x: hidden;
    }
    body{
        justify-content: center;
    }

    .up{
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-bottom: 2em;
    }

    .down > p {
        font-size: 0.7em;
        color: black;
    }
}


/*------------------------------------------- INTRO AVEC APPARITION DE LOGO -----------------------------------------*/

#introContainer {
    position: fixed;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 100%;
    opacity: 1;
    transition: opacity 2s ease-in-out;
}

#introGif {
    width: 10%;
    height: auto;
    object-fit: cover;
    opacity: 1;
    transition: opacity 2s ease-in-out;
}

.hidden {
    display: none;
}

#mainContent {
    opacity: 0;
    transition: opacity 2s ease-in-out;
    width: 100%;
}


.container {
    display: flex;
    flex-direction: column;
}

.element {
    cursor: pointer;
    margin: 10px;
    padding: 10px;
    border: 1px solid #000;
}

.overlay {
    display: none;
    border: 1px solid #000;
    padding: 20px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translateY(-50%, -50%);
    background-color: #fff;
    z-index: 2;
}




/**************************** MODE NUIT *******************************/

body.mode-nuit {
    background-color: var(--background-night);
    color: var(--text-color-night);
}

body.mode-nuit .menu >button {
    background-color: var(--background-night);
    color: var(--text-color-night);
}

body.mode-nuit .social-networks > button {
    background-color: var(--background-night);
    color: var(--text-color-night);
}

body.mode-nuit .sections-menu > .select {
    border-color: #ffff01;
    margin-right: 0;
}

body.mode-nuit .sections-menu {
    background-color: var(--background-night);
    color: var(--text-color-night);
}

body.mode-nuit .sections-menu > button {
    background-color: var(--background-night);
    color: var(--text-color-night);
}

